fix: tonal Button uses wrong color token

--- a/packages/skcom-css/src/components/button.scss
+++ b/packages/skcom-css/src/components/button.scss
@@ -91,12 +91,12 @@
 // Tonal Button
 .skc-button.skc-button--tonal {
   transition: box-shadow var(--motion-short-4) var(--easing-standard);
-  color: var(--on-primary-container);
-  background-color: var(--primary-container);
+  color: var(--on-secondary-container);
+  background-color: var(--secondary-container);
 
   // States
   &::before {
-    background-color: var(--on-primary-container);
+    background-color: var(--on-secondary-container);
   }
 
   &:hover::before {
